tdf#161234 New design for the cell outline

The change introduced by commit I9df98 made the cell outline a bit wider than the actual cell. However, that change did not play well with higher zoom levels because:
1) The AutoFill handle disconnected from the cell outline
2) The distance between the outline and the cell was too far in at higher zoom levels

This patch proposes an alternative design that deals with both issues.

Change-Id: Ic3cd7d240f6cfc1af4a39409537e264912ef61b3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167945
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Rafael Lima <rafael.palma.lima@gmail.com>